syntax = "proto3";

service BattleShipService {
    rpc StartGame (StartGameRequest) returns (StartGameResponse);
}

message StartGameRequest {
    int32 difficulty = 1;
}

message StartGameResponse {
    string gameId = 1;
    repeated ShipGRPC ships = 2;
    int32 gridSize = 3;
}

message ShipGRPC {
    string type = 1;
    int32 startRow = 2;
    int32 startCol = 3;
    int32 size = 4;
    bool isHorizontal = 5;
}